# CropDisease-Assistant

./: .env.example  .gitignore  README.md  clean_markdown_json.py  diseases_expanded.json  main.py  md_to_json.py  pyproject.toml  requirements.txt
Knowledge_base/: apple_scab.md  bacterial_spot_peach.md  bacterial_spot_pepper.md  bacterial_spot_tomato.md  black_rot.md  black_rot_apple.md  cedar_apple_rust.md  common_rust_corn.md  corn_gray_leaf_spot.md  diseases_from_md.json  early_blight.md  early_blight_tomato.md  esca_black_measles.md  grape_downy_mildew.md  huanglongbing_orange.md  late_blight.md  late_blight_tomato.md  leaf_blight_isariopsis .md  leaf_blight_isariopsis.md  leaf_blight_isariopsis_.md  leaf_mold.md  leaf_scorch_strawberry.md  northern_leaf_blight_corn.md  powdery_mildew_cherry.md  septoria_leaf_spot.md  spider_mites.md  target_spot.md  tomato_mosaic_virus.md  tomato_yellow_leaf_curl_virus.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Card.jsx  ChatBubble.jsx  LanguageToggle.jsx  Layout.jsx  PageTransition.jsx  ProgressBar.jsx  Sidebar.jsx  ThemeToggle.jsx  TopControls.jsx  (+2 more)
src/: config.py
src/api/: main.py  schemas.py
src/core/: __init__.py  diseases_from_md.json  index_builder.py
src/cv/: Plant_Diseases_VGG19.ipynb  Project.ipynb  __init__.py  classifier.py  constants.py  data_loader.py  inference.py  model.py  predict.py  train.py
src/generation/: __init__.py  rag_chain.py
src/services/: generation.py  prompt.py  retrival.py  tracing.py
(+18 files in other folders)
